<resources>
    <string name="app_name">감정인식</string>

    <!-- 경고 문구 -->
    <string name="warning_title">경고문</string>
    <string name="warning_content">이 앱은 상대방 얼굴 영상을 사용합니다.\n반드시 상대방의 동의를 얻고 사용하세요.\n이어폰 사용을 권장합니다.</string>
    <string name="warning_tts">상대방의 동의를 얻고 사용하세요</string>

    <!-- 메인 화면 -->
    <string name="mode_basic">기본 모드</string>
    <string name="mode_basic_hint">고대비, 음성안내</string>
    <string name="mode_non">비시각장애인 모드</string>
    <string name="guide_tts">화면 위쪽을 터치하면 시작합니다</string>

    <!-- 카메라 화면 -->
    <string name="unknown">얼굴을 비춰주세요</string>
    <string name="surprise">놀람</string>
    <string name="fear">무서움</string>
    <string name="angry">화남</string>
    <string name="neutral">평온함</string>
    <string name="sad">슬픔</string>
    <string name="disgust">싫어함</string>
    <string name="happy">행복함</string>

</resources>