<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/light_gray"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_center1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_center2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <!-- 기본 모드 -->
    <FrameLayout
        android:id="@+id/fl_mode_basic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/guide_center1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mode_basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_basic"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_mode_basic_hint"
        app:layout_constraintEnd_toEndOf="@id/fl_mode_basic"
        app:layout_constraintStart_toStartOf="@id/fl_mode_basic"
        app:layout_constraintTop_toTopOf="@id/fl_mode_basic"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_mode_basic_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_basic_hint"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/iv_logo"
        app:layout_constraintEnd_toEndOf="@id/fl_mode_basic"
        app:layout_constraintStart_toStartOf="@id/fl_mode_basic"
        app:layout_constraintTop_toBottomOf="@id/tv_mode_basic" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@id/fl_mode_basic"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="@id/fl_mode_basic"
        app:layout_constraintStart_toStartOf="@id/fl_mode_basic"
        app:layout_constraintTop_toBottomOf="@id/tv_mode_basic_hint"
        app:layout_constraintWidth_percent="0.3"
        tools:ignore="ContentDescription" />

    <!-- 비시각장애인 모드 -->
    <FrameLayout
        android:id="@+id/fl_mode_non"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:background="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_center2" />

    <TextView
        android:id="@+id/tv_mode_non"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_non"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fl_mode_non"
        app:layout_constraintEnd_toEndOf="@id/fl_mode_non"
        app:layout_constraintStart_toStartOf="@id/fl_mode_non"
        app:layout_constraintTop_toTopOf="@id/fl_mode_non" />

    <!-- 경고 화면 (N초후 gone 처리됨) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:clickable="false"
        android:focusable="false"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_warning"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@android:drawable/stat_sys_warning"
            app:layout_constraintBottom_toTopOf="@id/tv_warning_title"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.3"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_warning_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/warning_title"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_warning_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_warning" />

        <TextView
            android:id="@+id/tv_warning_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/warning_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_warning_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>